Please allow the script in resources/files/CanteenMenu/mensaUpdate.sh to execute.